# ONNX-TensorRT-LibTorch

./: .gitignore  CMakeLists.txt  CMakePreBuild.sh  README.md  build.cmake
c/: detectNet.cpp  detectNet.cu  detectNet.h  detect_utils.h  nms.cpp  nms.h  tensorConvert.cu  tensorConvert.h  tensorNet.cpp  tensorNet.h  yolov5.cpp  yolov5.h  yolov5_backbone.cpp  yolov5_backbone.h  yolov5_regression.cpp  yolov5_regression.h
calibration/: randInt8Calibrator.cpp  randInt8Calibrator.h
examples/: CMakeLists.txt
examples/camera_detection/: CMakeLists.txt  camera_detection.cpp
plugins/: FlattenConcat.cpp
plugins/interleaving/: interleaving.cu  interleaving.h  interleavingPlugin.h  intreleavingPlugin.cpp
plugins/slice/: slicePlugin.cpp  slicePlugin.h  stridedSlice.cu  stridedSlice.h
plugins/stereo/: conv3d_plugin.cpp  conv3d_transpose_plugin.cpp  conv_utils.cpp  conv_utils.h  cost_volume_plugin.cpp  elu_plugin.cpp  internal_macros.h  internal_utils.cpp  internal_utils.h  kernels.cu  networks.h  nvsmall_1025x321_net.cpp  nvtiny_513x161_net.cpp  padding_plugin.cpp  redtail_tensorrt_plugins.h  resnet18_1025x321_net.cpp  resnet18_2D_513x257_net.cpp  slice_plugin.cpp  softargmax_plugin.cpp  transform_plugin.cpp
plugins/upsampling/: upsampling.cu  upsampling.h  upsamplingPlugin.cpp  upsamplingPlugin.h
tools/: CMakeLists.txt  download-models.rc
tools/camera-capture/: CMakeLists.txt  LICENSE.md  README.md  camera-capture.cpp  captureWindow.cpp  captureWindow.h  controlClassify.cpp  controlClassify.h  controlDetection.cpp  controlDetection.h  controlWindow.cpp  controlWindow.h
tools/seg-img-tool/: CMakeLists.txt  seg-img-tool.cpp
tools/trt-bench/: CMakeLists.txt  trt-bench.cpp
tools/trt-console/: CMakeLists.txt  trt-console.cpp
utils/: .gitignore  CMakeLists.txt  README.md  URI.cpp  URI.h  alphanum.h  commandLine.cpp  commandLine.h  csvReader.h  csvReader.hpp  csvWriter.h  csvWriter.hpp  logging.cpp  logging.h  mat33.h  pi.h  rand.h
utils/camera/: v4l2Camera.cpp
utils/camera/camera-viewer/: CMakeLists.txt  camera-viewer.cpp
utils/camera/v4l2-console/: CMakeLists.txt  v4l2-console.cpp
utils/camera/v4l2-display/: CMakeLists.txt
utils/cuda/: FindCUDA.cmake  cudaAlphaBlend.cuh  cudaBayer.cpp  cudaBayer.h  cudaColormap.cu  cudaColormap.h  cudaColorspace.cpp  cudaColorspace.h  cudaCrop.cu  cudaCrop.h  cudaFilterMode.cu  cudaFilterMode.cuh  cudaFilterMode.h  cudaMappedMemory.h  cudaMath.h  cudaNormalize.cu  cudaNormalize.h  cudaPointCloud.cpp  cudaPointCloud.cu  cudaPointCloud.h  cudaResize.cu  cudaResize.h  cudaUtility.h  cudaVector.h  cudaWarp.h  cudaYUV.h
utils/cuda/BilinearImageResize/: CMakeLists.txt  main.cpp  resizeGPU.cu
utils/cuda/FindCUDA/: run_nvcc.cmake  select_compute_arch.cmake
utils/display/: glBuffer.cpp  glBuffer.h  glCamera.cpp  glCamera.h  glEvents.cpp  glEvents.h  glTexture.cpp  glTexture.h  glUtility.h  glWidget.cpp  glWidget.h
utils/display/gl-display-test/: CMakeLists.txt  cudaInteropKernels.cu  cudaInteropKernels.h  gl-display-test.cpp
utils/image/: imageFormat.h  imageFormat.inl  imageIO.cpp  imageIO.h  imageLoader.cpp  imageLoader.h  imageWriter.cpp  imageWriter.h  loadImage.h
utils/image/stb/: stb_truetype.h
utils/input/: devInput.cpp  devInput.h  devJoystick.cpp  devJoystick.h  devKeyboard.cpp  devKeyboard.h
utils/python/: CMakeLists.txt
utils/python/bindings/: CMakeLists.txt  FindNumPy.cmake  PyUtils.cpp
utils/video/: videoOptions.cpp  videoOptions.h  videoOutput.cpp  videoOutput.h  videoSource.cpp  videoSource.h
utils/video/video-viewer/: CMakeLists.txt  video-viewer.cpp
